[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/enemy_shoot.gd" type="Script" id=1]
[ext_resource path="res://Assets/sprites/alien_lazer_sheet.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.13893
height = 3.71416

[sub_resource type="Animation" id=2]
resource_name = "enemy_shoot"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="enemy_shoot" type="Area2D"]
position = Vector2( 0.0556812, 4.12041 )
collision_layer = 8
collision_mask = 17
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/enemy_shoot = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_enemy_shoot_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
